k8s-deployment/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pulplabs
  labels:
    app.kubernetes.io/name: pulplabs-site
