k8s-deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pulplabs-site
  namespace: pulplabs
  labels:
    app.kubernetes.io/name: pulplabs-site
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: pulplabs-site
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
